@@ -41,6 +41,7 @@ REST API
   - GET /patients/{id}/module, GET /patients/{id}/patient-module
   - GET /series/{id}/module, GET /studies/{id}/module, GET /instances/{id}/module
   - POST /tools/find
+* "/studies/{id}/split" accepts "Instances" parameter to split instances instead of series
 
 Maintenance
 -----------
